@@ -1,5 +1,7 @@
 2001-08-04  Martin Baulig  <baulig@suse.de>
 
+	* gnome-triggersP.h: Removed.
+
 	* libgnomeP.h: Removed.
 
 2001-08-04  Martin Baulig  <baulig@suse.de>
